@@ -27,11 +27,15 @@ import org.apache.nifi.controller.ReportingTaskNode;
 import org.apache.nifi.controller.service.ControllerServiceNode;
 import org.apache.nifi.groups.RemoteProcessGroup;
 import org.apache.nifi.web.ResourceNotFoundException;
+import org.apache.nifi.web.api.dto.ComponentStateDTO;
+import org.apache.nifi.web.api.dto.StateMapDTO;
 import org.apache.nifi.web.dao.ComponentStateDAO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
 import java.io.IOException;
+import java.util.HashMap;
+import java.util.Map;
 
 @Repository
 public class StandardComponentStateDAO implements ComponentStateDAO {
@@ -42,28 +46,88 @@ public class StandardComponentStateDAO implements ComponentStateDAO {
         try {
             final StateManager manager = stateManagerProvider.getStateManager(componentId);
             if (manager == null) {
-                throw new ResourceNotFoundException(String.format("State for the specified component %s could not be found.", componentId));
+                throw new ResourceNotFoundException("State for the specified component %s could not be found.".formatted(componentId));
             }
 
             return manager.getState(scope);
         } catch (final IOException ioe) {
-            throw new IllegalStateException(String.format("Unable to get the state for the specified component %s: %s", componentId, ioe), ioe);
+            throw new IllegalStateException("Unable to get the state for the specified component %s: %s".formatted(componentId, ioe), ioe);
         }
     }
 
-    private void clearState(final String componentId) {
+    private void clearState(final String componentId, ComponentStateDTO componentStateDTO) {
         try {
             final StateManager manager = stateManagerProvider.getStateManager(componentId);
             if (manager == null) {
-                throw new ResourceNotFoundException(String.format("State for the specified component %s could not be found.", componentId));
+                throw new ResourceNotFoundException("State for the specified component %s could not be found.".formatted(componentId));
             }
 
-            // clear both state's at the same time
-            manager.clear(Scope.CLUSTER);
-            manager.clear(Scope.LOCAL);
+            if (componentStateDTO == null) {
+                // clear both state's at the same time
+                manager.clear(Scope.CLUSTER);
+                manager.clear(Scope.LOCAL);
+            } else if (manager.getState(Scope.LOCAL) != null && !manager.getState(Scope.LOCAL).toMap().isEmpty() && !stateManagerProvider.isClusterProviderEnabled()) {
+                // we are in standalone mode, all state is local
+                if (manager.isStateKeyDropSupported()) {
+                    final Map<String, String> newState = toStateMap(componentStateDTO.getLocalState());
+                    final Map<String, String> currentState = manager.getState(Scope.LOCAL).toMap();
+
+                    if (hasExactlyOneKeyRemoved(currentState, newState)) {
+                        manager.setState(newState, Scope.LOCAL);
+                    } else {
+                        throw new IllegalStateException("Unable to remove a state key for component %s. Exactly one key removal is supported.".formatted(componentId));
+                    }
+                } else {
+                    throw new IllegalStateException("Selective state key removal is not supported for component %s with local state.".formatted(componentId));
+                }
+            } else if (manager.getState(Scope.LOCAL) != null && !manager.getState(Scope.LOCAL).toMap().isEmpty()) {
+                throw new IllegalStateException("Selective state key removal is not supported for component %s with local state.".formatted(componentId));
+            } else if (componentStateDTO.getClusterState() != null && !componentStateDTO.getClusterState().getState().isEmpty()) {
+                if (manager.isStateKeyDropSupported()) {
+                    final Map<String, String> newState = toStateMap(componentStateDTO.getClusterState());
+                    final Map<String, String> currentState = manager.getState(Scope.CLUSTER).toMap();
+
+                    if (hasExactlyOneKeyRemoved(currentState, newState)) {
+                        manager.setState(newState, Scope.CLUSTER);
+                    } else {
+                        throw new IllegalStateException("Unable to remove a state key for component %s. Exactly one key removal is supported.".formatted(componentId));
+                    }
+
+                    // we clear local anyway
+                    manager.clear(Scope.LOCAL);
+                } else {
+                    throw new IllegalStateException("Selective state key removal is not supported for component %s with cluster state.".formatted(componentId));
+                }
+            } else {
+                // clear both state's at the same time
+                manager.clear(Scope.CLUSTER);
+                manager.clear(Scope.LOCAL);
+            }
         } catch (final IOException ioe) {
-            throw new IllegalStateException(String.format("Unable to clear the state for the specified component %s: %s", componentId, ioe), ioe);
+            throw new IllegalStateException("Unable to clear the state for the specified component %s: %s".formatted(componentId, ioe), ioe);
         }
+    }
+
+    public boolean hasExactlyOneKeyRemoved(Map<String, String> currentState, Map<String, String> newState) {
+        // Check if newState has exactly one less key
+        if (currentState.size() - newState.size() != 1) {
+            return false;
+        }
+
+        // Check that newState is a subset of currentState
+        return newState.entrySet()
+                .stream()
+                .allMatch(entry -> entry.getValue().equals(currentState.get(entry.getKey())));
+    }
+
+    private static Map<String, String> toStateMap(final StateMapDTO stateMapDTO) {
+        final Map<String, String> map = new HashMap<>();
+        if (stateMapDTO == null || stateMapDTO.getState() == null) {
+            return map;
+        }
+
+        stateMapDTO.getState().forEach(entry -> map.put(entry.getKey(), entry.getValue()));
+        return map;
     }
 
     @Override
@@ -72,8 +136,8 @@ public class StandardComponentStateDAO implements ComponentStateDAO {
     }
 
     @Override
-    public void clearState(final ProcessorNode processor) {
-        clearState(processor.getIdentifier());
+    public void clearState(final ProcessorNode processor, final ComponentStateDTO componentStateDTO) {
+        clearState(processor.getIdentifier(), componentStateDTO);
     }
 
     @Override
@@ -82,8 +146,8 @@ public class StandardComponentStateDAO implements ComponentStateDAO {
     }
 
     @Override
-    public void clearState(final ControllerServiceNode controllerService) {
-        clearState(controllerService.getIdentifier());
+    public void clearState(final ControllerServiceNode controllerService, final ComponentStateDTO componentStateDTO) {
+        clearState(controllerService.getIdentifier(), componentStateDTO);
     }
 
     @Override
@@ -92,8 +156,8 @@ public class StandardComponentStateDAO implements ComponentStateDAO {
     }
 
     @Override
-    public void clearState(final ReportingTaskNode reportingTask) {
-        clearState(reportingTask.getIdentifier());
+    public void clearState(final ReportingTaskNode reportingTask, final ComponentStateDTO componentStateDTO) {
+        clearState(reportingTask.getIdentifier(), componentStateDTO);
     }
 
     @Override
@@ -102,8 +166,8 @@ public class StandardComponentStateDAO implements ComponentStateDAO {
     }
 
     @Override
-    public void clearState(final FlowAnalysisRuleNode flowAnalysisRule) {
-        clearState(flowAnalysisRule.getIdentifier());
+    public void clearState(final FlowAnalysisRuleNode flowAnalysisRule, final ComponentStateDTO componentStateDTO) {
+        clearState(flowAnalysisRule.getIdentifier(), componentStateDTO);
     }
 
     @Override
@@ -112,8 +176,8 @@ public class StandardComponentStateDAO implements ComponentStateDAO {
     }
 
     @Override
-    public void clearState(final ParameterProviderNode parameterProvider) {
-        clearState(parameterProvider.getIdentifier());
+    public void clearState(final ParameterProviderNode parameterProvider, final ComponentStateDTO componentStateDTO) {
+        clearState(parameterProvider.getIdentifier(), componentStateDTO);
     }
 
     @Override
